# dispersal-of-motile-microorganisms-in-porous-media

./: Diffusivity_IS_large_uniform_Squares.csv  Diffusivity_IS_small_uniform_Squares.csv  Diffusivity_RR_large_uniform_Disks.csv  Diffusivity_RR_small_uniform_Squares.csv  Disk.cpp  Disk.hpp  Domain.cpp  Domain.hpp  Environment.cpp  Makefile  Mobile.cpp  Mobile.hpp  Point.cpp  Point.hpp  README.md  Rectangle.cpp  Rectangle.hpp  Solid.cpp  main  main.cpp  makeerror.txt  makereturn.txt  tests.cpp  tree.txt
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
backup1_simu_stage_4A/: CMakeLists.txt  Environment.hpp  Mobile.cpp  Mobile.hpp  Point.cpp  Rectangle.cpp  Tau_estimation_data.csv  main.cpp
backup1_simu_stage_4A/Libraries/glad/src/: glad.c
data/: Trajectories.csv
include/glad/: glad.h
include/rendering/: DiskRenderer.hpp  EnvironmentRenderer.hpp  InfiniteEnvironmentRenderer.hpp  MobileRenderer.hpp  RectangleRenderer.hpp  Renderer.hpp  Shader.hpp  TrajectoryRenderer.hpp
include/simulation/: Disk.hpp  Domain.hpp  Environment.hpp  Mobile.hpp  Point.hpp  Rectangle.hpp  Solid.hpp  tests.hpp
shaders/: camera.vert
src/rendering/: DiskRenderer.cpp  EnvironmentRenderer.cpp  InfiniteEnvironmentRenderer.cpp  MobileRenderer.cpp  Rectanglerenderer.cpp  Renderer.cpp  Shader.cpp  TrajectoryRenderer.cpp
src/simulation/: Disk.cpp  Mobile.cpp  Rectangle.cpp  main.cpp  tests.cpp
